--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.9.0",
     "react-liowebrtc": "^1.2.9",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "twilio-chat": "^3.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
